made api documentation
